# CTA

./: .clang-format  .clang-format-ignore  .cppcheck-suppressions.txt  .cppcheck-supressions.txt  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  .taplo.toml  .yamllint  2019_12_05_CTA_smart_writing.tex  AUTHORS  CASTOR.spec  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  Dangerfile  Doxyfile  Doxyfile.in  Heartbeat.proto  Imakefile  Makefile.ini  PACKAGING.howto  README  README.md  REUSE.toml  ReleaseNotes  ReleaseNotes.md  analyze_logs.sh  analyze_logs_stress.sh  beamerouterthemecern.sty  beamerthemecern.sty  castor.spec.in.head  compile_commands.json  configure  (+25 more)
Drive/: CMakeLists.txt  Drive.cc  Drive.hh  DriveList.hh  DriveTest.cc  TapeDriveInfo.cc  TapeDriveReadWriteTest.cc
XRootdSSiRmcd/: CMakeLists.txt  RmcdApi.hpp  RmcdClient.cpp  RmcdClient.hpp  RmcdRequestProc.cpp  RmcdServiceProvider.cpp  RmcdServiceProvider.hpp  cta-xrmcd.conf  cta-xrmcd.logrotate  cta-xrmcd.service  cta-xrmcd.sysconfig  cta-xsmc-dismount.1cta  cta-xsmc-mount.1cta  rmc_send_scsi_cmd.cpp  rmc_send_scsi_cmd.h  rmc_sendrep.h  rmc_smcsubr.cpp  rmc_smcsubr.h  rmc_smcsubr2.h  serrno.cpp  serrno.h
castor/: BaseAddress.cpp  BaseAddress.h  BaseAddress.hpp  BaseAddressCInt.cpp  BaseCnvSvc.cpp  BaseCnvSvc.hpp  BaseObject.cpp  BaseObject.h  BaseObject.hpp  BaseObjectCInt.cpp  BaseServer.cpp  BaseServer.hpp  BaseSvc.cpp  BaseSvc.hpp  CMakeLists.txt  CnvFactory.hpp  Constants.cpp  Constants.h  Constants.hpp  ConstantsCInt.cpp  Converters.cpp  Converters.hpp  DlfMsgSvc.cpp  DlfMsgSvc.hpp  Factories.cpp  Factories.hpp  IAddress.cpp  IAddress.h  IAddress.hpp  IAddressCInt.cpp  IClient.cpp  IClient.h  IClient.hpp  IClientCInt.cpp  IClientFactory.cpp  IClientFactory.h  IClientFactory.hpp  IClientFactoryCInt.cpp  ICnvFactory.hpp  ICnvSvc.hpp  (+50 more)
catalogue/: AllCatalogueSchema.hpp  AllCatalogueSchema.hpp.in  ArchiveFileBuilder.cpp  ArchiveFileBuilder.hpp  ArchiveFileDoesNotExist.hpp  ArchiveFileItor.cpp  ArchiveFileItor.hpp  ArchiveFileItorImpl.cpp  ArchiveFileItorImpl.hpp  ArchiveFileRow.cpp  ArchiveFileRow.hpp  ArchiveFileRowWithoutTimestamps.cpp  ArchiveFileRowWithoutTimestamps.hpp  ArchiveFileSearchCriteria.hpp  AutoRollback.cpp  AutoRollback.hpp  CMakeLists.txt  CTARefCatalogueSchemaVersion.cmake  Catalogue.cpp  Catalogue.hpp  CatalogueExceptions.hpp  CatalogueFactory.cpp  CatalogueFactory.hpp  CatalogueFactoryFactory.cpp  CatalogueFactoryFactory.hpp  CatalogueFactoryTest.cpp  CatalogueFactory_OCCI_SUPPORT_OFF.cpp  CatalogueItor.hpp  CatalogueItorImpl.hpp  CatalogueMetadataGetter.cpp  CatalogueMetadataGetter.hpp  CatalogueRetryWrapper.cpp  CatalogueRetryWrapper.hpp  CatalogueSchema.cpp  CatalogueSchema.hpp  CatalogueTest.cpp  CatalogueTest.hpp  CatalogueUtils.cpp  CatalogueUtils.hpp  ChecksumTypeMismatch.cpp  (+354 more)
cmdline/: ActivityMountRuleLsResponseStream.hpp  AdminLsResponseStream.hpp  ArchiveRouteLsResponseStream.hpp  CMakeLists.txt  CTAAddAdminUser.cpp  CTACmd.cpp  CTACmd.hpp  CTACmdMain.cpp  CTACopyCmd.cpp  CTACopyCmd.hpp  CTACopyCmdMain.cpp  CTADirCmd.cpp  Configuration.cpp  Configuration.hpp  CtaAdminApi.hpp  CtaAdminCmd.cpp  CtaAdminCmd.hpp  CtaAdminCmdMain.cpp  CtaAdminCmdParse.cpp  CtaAdminCmdParse.hpp  CtaAdminCmdParser.cpp  CtaAdminCmdParser.hpp  CtaAdminParsedCmd.cpp  CtaAdminParsedCmd.hpp  CtaAdminResponseStream.hpp  CtaAdminTextFormatter.cpp  CtaAdminTextFormatter.hpp  CtaAdminXrdCmd.cpp  CtaAdminXrdCmd.hpp  CtaCmdOptions.hpp  CtaSendEvent.cpp  CtaVerifyFile.cpp  CtaVerifyFile.hpp  DiskInstanceLsResponseStream.hpp  DiskInstanceSpaceLsResponseStream.hpp  DiskSystemLsResponseStream.hpp  DriveLsResponseStream.hpp  EosCtaApi.h  EosCtaStub.cpp  FailedRequestLsResponseStream.hpp  (+28 more)
common/: ArchiveDirEntry.cpp  ArchiveDirEntry.hpp  ArchiveDirIterator.cpp  ArchiveDirIterator.hpp  ArchiveFileStatus.cpp  ArchiveFileStatus.hpp  ArchiveRequest.cpp  ArchiveRequest.hpp  Argcv.hpp  ByteArray.cpp  ByteArray.hpp  ByteArrayTest.cpp  CMakeLists.txt  CRC.cpp  CRC.hpp  CRCTest.cpp  Cdlopen.c  Cdomainname.c  Cexportconf.c  Cgetopt.c  Cgetopt.man  Cglobals.c  Cglobals.man  Cgrp.c  Checksum.cpp  Checksum.hpp  ChecksumTest.cpp  Cinitdaemon.c  CmdLineParams.cpp  CmdLineParams.hpp  CmdLineTool.cpp  CmdLineTool.hpp  Cmutex.c  Cmutex.man  Cnetdb.c  Configuration.cpp  Configuration.hpp  ConfigurationFile.cpp  ConfigurationFile.hpp  ConfigurationFileTests.cpp  (+115 more)
cta-dcache/: CMakeLists.txt  FrontendGRpcSvc.cpp  FrontendGRpcSvc.h  Main.cpp  README.md  cta-dcache.1cta  cta-dcache.service  cta-dcache.sysconfig
cta-release/: CMakeLists.txt  ceph.repo  cta-eos-citrine.repo  cta-eos-diopside-depend.repo  cta-eos-diopside.repo  cta-public.repo  cta-release-conf.json  cta-release.conf  cta-versionlock  cta-xrootd.repo  cta.repo  eos-citrine-depend.repo  eos-citrine.repo  eos-diopside-depend.repo  eos-diopside.repo  eos-quarkdb.repo  oracle-instant-client.repo  update-authors.pl  xrootd.repo
disk/: CMakeLists.txt  CryptoPPTest.cpp  DiskFile.cpp  DiskFile.hpp  DiskFileImplementations.hpp  DiskReporter.cpp  DiskReporter.hpp  DiskReporterFactory.cpp  DiskReporterFactory.hpp  DiskSystem.cpp  DiskSystem.hpp  DiskSystemTest.cpp  EOSReporter.cpp  EOSReporter.hpp  JSONDiskSystem.cpp  JSONDiskSystem.hpp  JSONFreeSpace.cpp  JSONFreeSpace.hpp  NullReporter.hpp  RadosStriperPool.cpp  RadosStriperPool.hpp  XrdClException.cpp  XrdClException.hpp
eos/: CMakeLists.txt  DiskReporter.cpp  DiskReporter.hpp  DiskReporterFactory.cpp  DiskReporterFactory.hpp  EOSReporter.cpp  EOSReporter.hpp  NullReporter.hpp
eos_cta/: CMakeLists.txt
eos_grpc_client/: CMakeLists.txt  GrpcClient.cpp  GrpcClient.hpp  GrpcEndpoint.cpp  GrpcEndpoint.hpp  GrpcUtils.cpp  GrpcUtils.hpp  Namespace.hpp
eos_rest_client/: CMakeLists.txt  JsonStructure.cpp  JsonStructure.hpp  JsonStructureLayer.cpp  JsonStructureLayer.hpp  RestClient.cpp  RestClient.hpp
frontend-grpc/: AsyncClient.hpp  AsyncServer.cpp  AsyncServer.hpp  CMakeLists.txt  ClientNegotiationRequestHandler.cpp  CtaAdminGrpcCmd.cpp  (+28 more)
(+17398 files in other folders)
